Switch to buttons (input[submit], etc.) instead of styled links
SVN-Revision: 1562

--- a/Visual Design/new_template/resources/tabbedflow.css
+++ b/Visual Design/new_template/resources/tabbedflow.css
@@ -71,26 +71,20 @@
   border-top: 1px solid #000;
 }
 
-.buttons a {
-  color: #eee;
-  background-color: #3876C1;
-  text-decoration: none;
-  padding: 3px;
-  margin: 3px;
-  border: 1px solid #ddd;
+.buttons input {
   display: block;
   float: left;
-}
-
-.buttons a:hover {
-  color: #333;
-  background-color: #5C94D5;
+  padding: 2px;
+  margin: 3px;
 }
 
 .local-buttons {
-  font-size: 0.9em;
   float: right;
   clear: both;
+}
+
+.local-buttons input {
+  font-size: 0.9em;
 }
 
 .flow-buttons {
